# GymAPI

./: .env.example  .test.env  ReadME.md  alembic.ini  pyproject.toml  pytest.ini
docker-composes/: mongo.yml  rabbit.yml
src/: config.py  constants.py  ioc.py  main.py
src/application/: mediator.py
src/application/commands/: customer.py  ticket.py
src/application/exception/: mediator.py
src/application/exceptions/: customer.py  mediator.py  pagination.py  ticket.py
src/application/handlers/commands/: base.py  customer.py  ticket.py
src/application/handlers/events/: base.py  customer.py
src/application/handlers/queries/: base.py  customer.py  ticket.py
src/application/interfaces/brokers/: amqp.py
src/application/interfaces/repositories/: customer.py  ticket.py
src/application/mediator/: bootstrap.py  ioc.py  mediator.py
src/application/mediator/protocols/: command_mediator.py  event_mediator.py  query_mediator.py
src/application/queries/: base.py  customer.py  ticket.py
src/domain/entities/: base.py  consumer.py  customer.py  ticket.py
src/domain/events/: base.py  customer.py
src/domain/exceptions/: name.py  phone.py  workout_number.py
src/domain/values/: base.py  name.py  phone.py  workout_number.py
src/infrastruction/broker/: rabbit.py
src/ioc/: ioc.py  mediator.py
src/presentation/api/: exceptions.py
test/: conftest.py
test/application/: conftest.py  test_customer.py  test_pagination.py  test_ticket.py
test/domain/entities/: conftest.py  test_ticket.py
test/domain/values/: test_name.py  test_phone.py  test_workout_number.py
(+16 files in other folders)
