[project]
name = "gymapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim",email = "yrev2011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
faker = "^37.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
