[project]
name = "gymapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim",email = "yrev2011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dishka (>=1.5.3,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
faker = "^37.1.0"
pytest-asyncio = "^0.26.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
